Ensure debug log is visible during registration/import

--- a/stylesheets/_global.scss
+++ b/stylesheets/_global.scss
@@ -610,7 +610,6 @@ input[type=text], input[type=search], textarea {
 }
 
 .full-screen-flow {
-  z-index: 1000;
   position: absolute;
   left: 0;
   right: 0;
